Api geliştirmeleri yapıldı ve sign Up ekranındaki duzenlemeler yapıldı ancak arka tarafı eklenmedı henız.

--- a/ESourcing.UI/Views/Home/Signup.cshtml
+++ b/ESourcing.UI/Views/Home/Signup.cshtml
@@ -41,20 +41,12 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsAdmin" /> @Html.DisplayNameFor(model => model.IsAdmin)
-                </label>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsSupplier" /> @Html.DisplayNameFor(model => model.IsSupplier)
-                </label>
+            <div class="form-group">
+                <label>Custom Select</label>
+                <select class="custom-select">
+                    <option>Is Buyer</option>
+                    <option>Is Seller</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
