Client api yapısı bızım projemızdekı gıbı mantıklı duzenlendı ve gelıstırmesı yapıldı. Auction ekranında datalar lıstelendı. Create ekranı ıslemlerıne baslanıcak. Auction ve genel olarak apilar ıcın altyapı hazırlıkları tamamlandı

--- a/ESourcing.UI/Views/Auction/Create.cshtml
+++ b/ESourcing.UI/Views/Auction/Create.cshtml
@@ -28,6 +28,10 @@
                                 <label for="exampleInputEmail1">Auction Name</label>
                                 <input type="email" class="form-control" id="exampleAuctionName" placeholder="Enter Auction Name">
                             </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Auction Description</label>
+                                <input type="email" class="form-control" id="exampleAuctionDescription" placeholder="Enter Auction Description">
+                            </div>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="vert-tabs-profile" role="tabpanel" aria-labelledby="vert-tabs-profile-tab">
