--- a/ESourcing.UI/Views/Home/Signup.cshtml
+++ b/ESourcing.UI/Views/Home/Signup.cshtml
@@ -42,7 +42,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label>Custom Select</label>
+                <label>User Type Select</label>
                 <select class="custom-select">
                     <option>Is Buyer</option>
                     <option>Is Seller</option>
