--- a/ESourcing.UI/Views/Shared/_Layout.cshtml
+++ b/ESourcing.UI/Views/Shared/_Layout.cshtml
@@ -214,6 +214,12 @@
             $('#reservationdate').datetimepicker({
                 format: 'L'
             });
+            $('#StartedAt').datetimepicker({
+                format: 'L'
+            });
+            $('#finishedAt').datetimepicker({
+                format: 'L'
+            });
             //Date range picker
             $('#reservation').daterangepicker()
             //Date range picker with time picker
